--- a/.gitignore
+++ b/.gitignore
@@ -5,17 +5,18 @@ node_modules
 .pnp
 .pnp.js
 
+# TypeScript output
+**/dist
+**/build
+*.tsbuildinfo
+
 # testing
 coverage
 
 # next.js
-.next/
+.next/**
 out/
 build
-
-# misc
-.DS_Store
-*.pem
 
 # debug
 npm-debug.log*
@@ -30,3 +31,40 @@ yarn-error.log*
 
 # turbo
 .turbo
+
+*.local
+.env
+.cache
+server/dist
+public/dist
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
+*.pem
