--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "private": true,
   "workspaces": [
     "apps/*",
-    "packages/*"
+    "packages/*",
+    "stacks/*"
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint"
+    "clean": "turbo run clean",
+    "dev": "turbo run dev --no-cache --continue",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "turbo run lint",
+    "test": "turbo run test",
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
-    "eslint-config-custom": "*",
-    "eslint": "7.32.0",
-    "prettier": "^2.5.1",
-    "turbo": "latest"
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.6.0",
+    "eslint": "^8.49.0",
+    "jest": "^29.6.4",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "turbo": "latest",
+    "typescript": "^5.2.2"
   },
-  "packageManager": "npm@8.19.4"
+  "prettier": "@vercel/style-guide/prettier",
+  "packageManager": "npm@9.8.1"
 }
